# SmartCalc

./: .gitignore  README.md  calc.py  history.pickle  install.sh  install_script.py  main.py  model.py  presenter.py  pyproject.toml  requirements.txt  setup.py  view.py
smartcalc/: history.pickle  install_script.py  main.py  pyproject.toml  requirements.txt  setup.py
smartcalc/icon/: calc_icon.icns
smartcalc/model/: model.py
smartcalc/presenter/: presenter.py  utils.py
smartcalc/tests/: conftest.py  test_expressions.py  test_negative.py  test_polish_notation.py  test_simple_operations.py
smartcalc/tests/allure-report/: index.html
smartcalc/tests/allure-report/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
smartcalc/tests/allure-report/data/test-cases/: 113d5329ed3b4187.json  12f9e6cc682ee7dc.json  1532cab2a73fa694.json  1874a272ffc13132.json  278174082737a61d.json  27bb1843ea6ec5d1.json  321141bde9fc5c8d.json  35b9521167275dee.json  3a72f570651e8b3c.json  3dca58cd8037064.json  3eccfa713b3e2967.json  458d3a70ae2b4b7b.json  4d3af312ffc3e7ed.json  50b8a950cc084d70.json  525207b4cb981750.json  55669b73536bc800.json  5cbc5c4cb872b465.json  5d940bf5fdab07f0.json  5e2ee4ee6f57c0c9.json  78a1b30a944a4ba7.json  (+37 more)
smartcalc/tests/allure-report/export/: influxDbData.txt  prometheusData.txt
smartcalc/tests/allure-report/history/: history.json
smartcalc/tests/allure-report/widgets/: duration.json  severity.json  status-chart.json  suites.json  summary.json
smartcalc/view/: graph.py  help.py  history.py  main_window.py  utils.py  view.py
(+128 files in other folders)
