[tool.poetry]
name = "smartcalc"
version = "3.0"
description = ""
authors = ["Andrey Krestyaninov <andrkrestyaninov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
