[tool.poetry]
name = "smartcalc"
version = "0.1.0"
description = ""
authors = ["trubyroid <andrkrestyaninov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
setuptools = "==70.3.0"
matplotlib = "^3.9.2"
py2app = "^0.28.8"
simpleeval = "^1.0.3"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
